Revamping a boring sad UI to a shiny happy one

--- a/XYZReader/src/main/res/layout-sw600dp/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/fragment_article_detail.xml
@@ -1,4 +1,5 @@
 <com.example.xyzreader.ui.DrawInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/draw_insets_frame_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -22,7 +23,7 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/empty_detail"
                     android:layout_width="match_parent"
-                    android:layout_height="305dp" />
+                    android:layout_height="390dp" />
 
                 <View
                     android:layout_width="match_parent"
