--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -6,32 +6,40 @@
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
+    app:cardCornerRadius="4dp"
+    app:contentPadding="16dp"
+    app:cardUseCompatPadding="true"
+    app:cardPreventCornerOverlap="true"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <!--suppress AndroidLintContentDescription -->
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+        <!--<ImageView-->
+       <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@color/photo_placeholder" />
+            android:layout_gravity="center"
+            android:paddingBottom="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/article_title"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingRight="16dp"
             android:paddingLeft="16dp"
             android:paddingTop="16dp"
-            android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="@color/ltgray"
+            android:padding="16dp"
+            android:textColor="@color/textColor"
+            android:fontFamily="monospace-bold"
             android:ellipsize="end"
             android:maxLines="4" />
 
@@ -40,10 +48,11 @@
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:paddingBottom="16dp"
-            android:textColor="#6000"
+            android:paddingLeft="16dp"
+            android:paddingBottom="4dp"
+            android:fontFamily="monospace"
+            android:textColor="@color/textColor"
             android:maxLines="2"
             android:ellipsize="end" />
     </LinearLayout>
