--- a/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
+++ b/XYZReader/src/main/res/layout-sw600dp/list_item_article.xml
@@ -46,9 +46,9 @@
 
         <TextView
             android:id="@+id/article_subtitle"
+            style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
             android:paddingRight="16dp"
             android:paddingLeft="16dp"
             android:paddingBottom="4dp"
