--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -23,7 +23,7 @@
         <!--<ImageView-->
        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
-            android:layout_gravity="center"
+            android:scaleType="centerCrop"
             android:paddingBottom="4dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
